# data-science-labs

./: SEDS_Lab4.ipynb
lab4_repo/: LICENSE  Makefile  README.md  pyproject.toml
lab4_repo/docs/: mkdocs.yml
lab4_repo/docs/docs/: index.md
lab4_repo/lab4_module/: __init__.py  dataset.py  features.py  plots.py
lab4_repo/lab4_module/modeling/: predict.py  train.py
lab4_repo/src/model/: row_2_list.py  sentiment.py
lab4_repo/tests/model/: test_module.py  test_row_2_list.py  test_sentiment.py
